--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<section id="title">
 		<div class="container-fluid">
 	<nav class="navbar navbar-expand-lg ">
-		<a class="navbar-brand"href="navbar-brand" href="">akhil</a>
+		<a class="navbar-brand"href="navbar-brand" href="">akhilesh</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -44,8 +44,31 @@
 
 	</div>
 </div>
+</section>
+
+<section id="features">
+	<div class="row">
+	<div class="feature-box col-lg-4">
+		<i class="icon fas fa-heart fa-4x"></i>
+		<h3>Easy to use.</h3>
+		<p>so easy to use even u can use</p>
+	</div>
+	<div class="feature-box col-lg-4">
+		<!-- https://fontawesome.com/icons/kiss-wink-heart?style=solid -->
+		<i class="icon fas fa-kiss-wink-heart fa-4x"></i>
+		<h3>Easy to use.</h3>
+		<p>so easy to use even u can use</p>
+	</div>
+	<div class="feature-box col-lg-4">
+		<i class="icon fas fa-heartbeat fa-4x"></i>
+		<h3>Easy to use.</h3>
+		<p>so easy to use even u can use</p>
+	</div>
+</div>
+	
+</section>
 
 </div>
-</section>
+
 </body>
 </html>
