--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
 </div>
 	
 </section>
+<!-- testimonials -->
+<section id="testimonials">
+	<h2>Tajurbe ne ek nayi baat sikhaee hai ..ek naya dard hi ..puraane dard ki davaee hai,Experience has taught us somthing new </h2>
+	<img class="testimonial_image"src="pain.jpg"alt="pain_profile">
+	<em>Kilokari, Delhi</em>
+</section>
+<section id="press">
+	<img class="press_logo" src="aaj.png"alt="aaj_profile">
+	<img  class="press_logo" src="star.png"alt="star_profile">
+	<img  class="press_logo" src="Star_Majha.png"alt="Star_Majha_profile">
+	<img  class="press_logo" src="ABP.png"alt="abp_profile">
+</section>
 
 </div>
 
