--- a/index.html
+++ b/index.html
@@ -69,9 +69,29 @@
 </section>
 <!-- testimonials -->
 <section id="testimonials">
-	<h2>Tajurbe ne ek nayi baat sikhaee hai ..ek naya dard hi ..puraane dard ki davaee hai,Experience has taught us somthing new </h2>
-	<img class="testimonial_image"src="pain.jpg"alt="pain_profile">
+<div id="testimonial-carousel" class="carousel slide" data-ride="false">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+    	<h2>Tajurbe ne ek nayi baat sikhaee hai ..ek naya dard hi ..puraane dard ki davaee hai..</h2>
+    	<img class="testimonial_image"src="pain.png"alt="pain_profile">
 	<em>Kilokari, Delhi</em>
+    </div>
+       <div class="carousel-item " >
+    	<h2>“The purpose of our lives is to be happy.”</h2>
+    	<img class="testimonial_image"src="happy.jpg"alt="happy_profile">
+	<em>Kilokari, Delhi</em>
+    </div>
+        
+</div>
+<a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  
+  </a>
+  <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+   
+  </a>
+  </div>	
 </section>
 <section id="press">
 	<img class="press_logo" src="aaj.png"alt="aaj_profile">
