--- a/index.html
+++ b/index.html
@@ -99,6 +99,59 @@
 	<img  class="press_logo" src="Star_Majha.png"alt="Star_Majha_profile">
 	<img  class="press_logo" src="ABP.png"alt="abp_profile">
 </section>
+<section id="pricing">
+	<h2>A Plan for every person needs</h2>
+	<p>Simple and affortable price plan for you..</p>
+
+	<div class="row">
+    <div class="pricing-column col-lg-4 col-md-6">
+<div class="card">
+	<div class="card-header">
+		<h3>Samsung</h3>
+	</div>
+	<div class="card-body">
+		<h2>Free</h2>
+		<p>5 Match per Day</p>
+		<p>10 Match per Day</p>
+		<p>Unlimited App Usage</p>
+		<button class=" btn btn-lg btn-block btn-outline-primary" type="button">Sign Up</button>
+	</div>
+</div>
+
+</div>
+ <div class="pricing-column col-lg-4 col-md-6">
+<div class="card">
+	<div class="card-header">
+		<h3>Apple</h3>
+	</div>
+	<div class="card-body">
+		<h2>$29</h2>
+		<p>5 Match per Day</p>
+		<p>10 Match per Day</p>
+		<p>Unlimited App Usage</p>
+		<button class=" btn btn-lg btn-block btn-outline-primary" type="button">Sign Up</button>
+	</div>
+</div>
+
+</div>
+ <div class="pricing-column col-lg-4 col-md-12">
+<div class="card">
+	<div class="card-header">
+		<h3>Vivo</h3>
+	</div>
+	<div class="card-body">
+		<h2>$18</h2>
+		<p>5 Match per Day</p>
+		<p>10 Match per Day</p>
+		<p>Unlimited App Usage</p>
+		<button class=" btn btn-lg btn-block btn-outline-dark" type="button">Sign Up</button>
+	</div>
+</div>
+
+</div>
+
+</div>
+</section>
 
 </div>
 
