--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 						
 						<ul class="navbar-nav ml-auto">
 							<li class="nav-item">
-								<a class="nav-link" href="">Contact</a>
+								<a class="nav-link" href="#footer">Contact</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="">Services</a>
+								<a class="nav-link" href="#cta">Download</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="">About</a>
+								<a class="nav-link" href="#pricing">Pricing</a>
 							</li>
 						</ul>
 					</nav>
@@ -143,8 +143,22 @@
 								</div>
 							</div>
 						</div>
+						
 					</div>
 				</section>
 			</div>
+			<!-- call to Action -->
+			<section id="cta">
+				<h3 class="cta-heading">Find the true App and Download for your use..</h3>
+				<button class="download-button btn btn-lg btn-dark"type="button"><i class="fas fa-apple-alt"></i> Download</button>
+				<button class="download-button btn btn-lg btn-light"type="button"><i class="fab fa-google-play"></i> Download</button>
+			</section>
+			<footer id="footer">
+				<i class="social-icon fab fa-facebook"></i>
+				<i class="social-icon fab fa-instagram"></i>
+				<i class="social-icon fab fa-twitter"></i>
+				<i class="social-icon fab fa-youtube"></i>
+				<p>Copyright 2020 Akhilesh30004</p>
+			</footer>
 		</body>
 	</html>
