--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 					</div>
 				</section>
 				<section id="press">
-					<img class="press_logo" src="aaj.png"alt="aaj_profile">
-					<img  class="press_logo" src="star.png"alt="star_profile">
+					<img class="press_logo" src="Aaj.png"alt="aaj_profile">
+					<img  class="press_logo" src="Star.png"alt="star_profile">
 					<img  class="press_logo" src="Star_Majha.png"alt="Star_Majha_profile">
 					<img  class="press_logo" src="ABP.png"alt="abp_profile">
 				</section>
