--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<section id="title">
 			<div class="container-fluid">
 				<nav class="navbar navbar-expand-lg ">
-					<a class="navbar-brand"href="navbar-brand" href="">akhilesh</a>
+					<a class="navbar-brand"href="https://www.covid19india.org/" href="">akhilesh</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 					</button>
