--- a/index.html
+++ b/index.html
@@ -49,18 +49,18 @@
 						<div class="feature-box col-lg-4">
 							<i class="icon fas fa-heart fa-4x"></i>
 							<h3>Easy to use.</h3>
-							<p>so easy to use even u can use</p>
+							<p>Just the right amount of everything.</p>
 						</div>
 						<div class="feature-box col-lg-4">
 							<!-- https://fontawesome.com/icons/kiss-wink-heart?style=solid -->
 							<i class="icon fas fa-kiss-wink-heart fa-4x"></i>
 							<h3>Easy to use.</h3>
-							<p>so easy to use even u can use</p>
+							<p>You’ve never seen a watch like this.</p>
 						</div>
 						<div class="feature-box col-lg-4">
 							<i class="icon fas fa-heartbeat fa-4x"></i>
 							<h3>Easy to use.</h3>
-							<p>so easy to use even u can use</p>
+							<p>Incredible power at an incredible value.</p>
 						</div>
 					</div>
 					
