--- a/index.html
+++ b/index.html
@@ -39,10 +39,15 @@
 							<button type="button" class="btn btn-dark btn-lg download-button"><i class="fas fa-apple-alt"></i> Download</button>
 							<button type="button" class="btn btn-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
 						</div>
-						<div class="col-lg-6">
+<!-- 						<div class="col-lg-6">
 							<img class="title-image" src="/mypage/mobile.png">
 						</div>
-					</div>
+					</div> -->
+						<a href="https://example.com/">
+<video width="300" height="250" fullscreen="false" webkit-playsinline controls autoplay muted poster="http://example.com/thumbnail.gif">
+<source src="/mypage/video.mp4" type="video/mp4">
+</video>
+</a>
 				</section>
 				<section id="features">
 					<div class="row">
