--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					</div>
 						<a href="https://example.com/">
 <video width="600" height="500" fullscreen="false" webkit-playsinline controls autoplay muted poster="http://example.com/thumbnail.gif">
-<source src="https://www.youtube.com/watch?v=ukWjypZBaGQ&feature=youtu.be" type="video/mp4">
+<source src="/mypage/download1.mp4" type="video/mp4">
 </video>
 </a>
 				</section>
